[package]
name = "dexcom"
version = "0.1.0"
edition = "2021"
authors = ["Sehyun Park <doodot.dev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ous = []

[dependencies]
heapless = { version = "0.7" }

serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5" }
