[package]
name = "dexcom"
version = "0.1.0"
edition = "2021"
authors = ["Sehyun Park <doodot.dev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ous = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

embedded-svc = { version = "0.26" }

anyhow = { version = "1.0" }
